continue styling landing page

--- a/themes/tria-2019/layout/_partial/hero.hbs
+++ b/themes/tria-2019/layout/_partial/hero.hbs
@@ -1,3 +1,11 @@
 <aside>
-  <div>(hero)</div>
+  <div>
+    <nav class="social">
+      {{!-- Dribbble, GitHub, Twitter, CodePen --}}
+      <a href=""><svg><use xlink:href="/images/social.svg#twitter"></use></svg></a>
+      <a href=""><svg><use xlink:href="/images/social.svg#github" /></svg></a>
+      <a href=""><svg><use xlink:href="/images/social.svg#codepen" /></svg></a>
+      <a href=""><svg><use xlink:href="/images/social.svg#dribbble" /></svg></a>
+    </nav>
+  </div>
 </aside>
