--- a/themes/tria-2019/layout/index.ejs
+++ b/themes/tria-2019/layout/index.ejs
@@ -1,6 +1,6 @@
 <h1>Recent Posts</h1>
 <ol>
-  <% for (let post of site.posts.data.slice(-4).reverse()) { %>
+  <% for (let post of site.posts.data.slice(-3).reverse()) { %>
     <li class="post">
       <a href="<%= url_for(post.path) %>">
         <h2><%= post.title %></h2>
@@ -15,8 +15,10 @@
   <ul class="projects">
     <% for (let project of featuredProjects) { %>
       <li>
-        <h2><%= project.name %></h2>
-        <p class="excerpt"><%= project.description %></p>
+        <a href="<%= url_for('projects') %>">
+          <h2><%= project.name %></h2>
+          <p class="excerpt"><%= project.description %></p>
+        </a>
       </li>
     <% } %>
   </ul>
