--- a/themes/tria-2019/source/css/_palette.scss
+++ b/themes/tria-2019/source/css/_palette.scss
@@ -4,6 +4,14 @@
   --color-foreground-active: hsl(70, 7%, 64%);
 
   --base-size: 1.4rem;
+  --font-size: var(--base-size);
+}
+
+@font-face {
+  font-family: 'Fira Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/fonts/fira-sans-300.woff2') format('woff2'), url('/fonts/fira-sans-300.woff') format('woff');
 }
 
 @font-face {
