--- a/themes/tria-2019/source/css/_content.scss
+++ b/themes/tria-2019/source/css/_content.scss
@@ -40,7 +40,7 @@ main {
   font-size: var(--base-size);
   font-weight: 300;
   margin: 0 auto;
-  max-width: 64.0rem;
+  max-width: 80.0rem;
   padding: calc(var(--base-size) * 2) calc(var(--base-size) * 2) 0;
 
   h1, h2, header time {
@@ -51,7 +51,8 @@ main {
 
   h1 {
     color: white;
-    font-size: 2.0rem;
+    font-size: 2.4rem;
+    font-weight: 300;
     margin-bottom: calc(var(--base-size) * 1.5);
     text-align: center;
   }
