add more design elements

--- a/themes/tria-2019/source/css/_palette.scss
+++ b/themes/tria-2019/source/css/_palette.scss
@@ -3,6 +3,8 @@
   --color-foreground: hsl(70, 12%, 82%);
   --color-foreground-active: hsl(70, 7%, 64%);
 
+  --color-link: hsl(170, 70%, 50%);
+
   --base-size: 1.4rem;
   --font-size: var(--base-size);
 
