--- a/themes/tria-2019/layout/_partial/hero.hbs
+++ b/themes/tria-2019/layout/_partial/hero.hbs
@@ -1,11 +1,35 @@
-<aside>
+{{!-- <aside>
   <div>
     <nav class="social">
-      {{!-- Dribbble, GitHub, Twitter, CodePen --}}
       <a href=""><svg><use xlink:href="/images/social.svg#twitter"></use></svg></a>
       <a href=""><svg><use xlink:href="/images/social.svg#github" /></svg></a>
       <a href=""><svg><use xlink:href="/images/social.svg#codepen" /></svg></a>
       <a href=""><svg><use xlink:href="/images/social.svg#dribbble" /></svg></a>
     </nav>
+  </div>
+</aside> --}}
+<aside>
+  <div class="container">
+    <p class="about">I apply holistic design principles to make the web both usable and beautiful.</p>
+    <p class="social">
+      <a href="https://twitter.com/timgthomas" target="_blank">
+        <svg><use xlink:href="/images/social.svg#twitter"></use></svg>
+        Twitter
+      </a>
+      <a href="https://github.com/timgthomas" target="_blank">
+        <svg><use xlink:href="/images/social.svg#github" /></svg>
+        Github
+      </a>
+      <a href="http://codepen.io/TimGThomas" target="_blank">
+        <svg><use xlink:href="/images/social.svg#codepen" /></svg>
+        CodePen
+      </a>
+      </a>
+      <a href="https://dribbble.com/timgthomas" target="_blank">
+        <svg><use xlink:href="/images/social.svg#dribbble" /></svg>
+        Dribbble
+      </a>
+    </p>
+    <img src="/images/avatar.png" alt="">
   </div>
 </aside>
