--- a/themes/tria-2019/layout/post.hbs
+++ b/themes/tria-2019/layout/post.hbs
@@ -6,10 +6,10 @@
   {{{page.content}}}
   <nav>
     {{#if page.prev}}
-      <a href="{{url_for page.prev.path}}">{{page.prev.title}}</a>
+      <a href="{{url_for page.prev.path}}" class="prev">{{page.prev.title}}</a>
     {{/if}}
     {{#if page.next}}
-      <a href="{{url_for page.next.path}}">{{page.next.title}}</a>
+      <a href="{{url_for page.next.path}}" class="next">{{page.next.title}}</a>
     {{/if}}
   </nav>
 </article>
