--- a/themes/tria-2019/source/css/_banner.scss
+++ b/themes/tria-2019/source/css/_banner.scss
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   display: grid;
   filter: drop-shadow(0 4px rgba(0, 0, 0, 0.15));
-  font-size: var(--base-size);
+  font-size: 1.6rem;
   grid-gap: calc(var(--base-size) / 2);
   grid-template-columns: 1fr 38px 1fr;
   height: calc(var(--base-size) * 4);
@@ -16,6 +16,7 @@
   top: 0;
   text-transform: uppercase;
   width: 100%;
+  z-index: 1;
 
   &::after {
     background-image: linear-gradient(135deg, transparent 50%, var(--color-background) 50%);
@@ -46,5 +47,9 @@
     height: 44px;
     padding: 0 calc(var(--base-size) / 2);
     text-decoration: none;
+
+    &.active {
+      color: white;
+    }
   }
 }
