--- a/themes/tria-2019/source/css/_content.scss
+++ b/themes/tria-2019/source/css/_content.scss
@@ -1,41 +1,3 @@
-aside {
-  align-items: stretch;
-  background-image: linear-gradient(to bottom, #1e1d27, #48475f);
-  display: flex;
-  height: calc(var(--base-size) * 8);
-  justify-content: center;
-
-  > div {
-    max-width: 64.0rem;
-    padding: calc(var(--base-size) * 2) var(--base-size);
-    width: 100%;
-  }
-
-  .social {
-    display: flex;
-  }
-
-  .social a {
-    // TODO: Transition stroke color.
-
-    display: block;
-    fill: currentColor;
-    height: 44px;
-    margin-right: -22px;
-    margin-top: -19px;
-    width: 44px;
-
-    &:nth-of-type(2n) {
-      margin-top: 19px;
-    }
-
-    svg {
-      height: 100%;
-      width: 100%;
-    }
-  }
-}
-
 main {
   font-size: var(--base-size);
   font-weight: 300;
@@ -54,15 +16,21 @@ main {
     font-size: 2.4rem;
     font-weight: 300;
     margin-bottom: calc(var(--base-size) * 1.5);
-    text-align: center;
+    position: relative;
+
+    &::before {
+      --size: calc(var(--font-size) * 1.25 / 1.414);
+      background: var(--color-background);
+      border-radius: 0 4px;
+      box-shadow: 3px -3px 0 #c556b7;
+      content: '';
+      display: block;
+      height: var(--size);
+      left: -5px;
+      position: absolute;
+      top: 50%;
+      transform: translate(-100%, -50%) scaleX(0.576) rotate(45deg);
+      width: var(--size);
+    }
   }
 }
-
-// TODO: Move to projects layout CSS?
-// .projects {
-//   list-style-type: none;
-//
-//   > li + li {
-//     margin-top: var(--base-size);
-//   }
-// }
