style projects page

--- a/themes/tria-2019/source/css/_content.scss
+++ b/themes/tria-2019/source/css/_content.scss
@@ -34,3 +34,11 @@ main {
     }
   }
 }
+
+h2 {
+  border-bottom: 1px solid;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+  line-height: 1.618;
+  width: max-content;
+}
