--- a/themes/tria-2019/layout/projects.hbs
+++ b/themes/tria-2019/layout/projects.hbs
@@ -1,14 +1,18 @@
 <h1>{{page.title}}</h1>
-<ul class="projects">
+<ul>
   {{#each site.data.projects}}
     <li>
       <h2 id="{{id}}">{{name}}</h2>
+      <div class="img" style="background-image: url('/images/projects/{{id}}.jpg')"></div>
       <p>{{description}}</p>
       {{#if links.length}}
         <nav aria-labelledby="{{id}}-links">
           <h3 id="{{id}}-links">Links</h3>
           {{#each links}}
-            <a href="{{link}}">{{type}}</a>
+            <a href="{{link}}" target="_blank">
+              <svg><use xlink:href="/images/social.svg#{{type}}"></use></svg>
+              {{type}}
+            </a>
           {{/each}}
         </nav>
       {{/if}}
