--- a/themes/tria-2019/source/css/partials/_project.scss
+++ b/themes/tria-2019/source/css/partials/_project.scss
@@ -24,6 +24,7 @@
   }
 
   .img {
+    background-position: top center;
     background-size: cover;
     border: none;
     border-radius: calc(var(--base-size) / 2);
