add some responsive layouts for projects

--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -5,10 +5,10 @@
   <link rel="icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" href="/css/style.css">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <title><%= page.title ? page.title + ' | ' : '' %>Tim G. Thomas</title>
 </head>
-<body>
+<body ontouchstart>
   <header role="banner">
     <h1>
       <a class="<%- is_current('/', true) ? 'active' : '' %>" href="/">Tim G Thomas</a>
