--- a/themes/tria-2019/source/css/layouts/_post.scss
+++ b/themes/tria-2019/source/css/layouts/_post.scss
@@ -38,6 +38,12 @@ article {
     text-indent: var(--base-size);
   }
 
+  figure {
+    max-width: 100%;
+    overflow: auto;
+    -webkit-touch-overflow: scroll;
+  }
+
   hr {
     background: var(--color-foreground-active);
     border: none;
