--- a/themes/working-title/source/css/style.scss
+++ b/themes/working-title/source/css/style.scss
@@ -1,86 +1,7 @@
-// Resets ======================================================================
-
-* {
-  box-sizing: inherit;
-  font: inherit;
-  line-height: inherit;
-  margin: 0;
-  padding: 0;
-}
-
-:root {
-  -webkit-font-smoothing: antialiased;
-  background-color: var(--color-background);
-  box-sizing: border-box;
-  color: var(--color-body);
-  color-scheme: light dark;
-  font-family: 'Weekly Pro';
-  line-height: 1;
-}
-
-// Typography ==================================================================
-
-@font-face {
-  font-family: 'Karu';
-  font-style: oblique;
-  font-weight: 500;
-  src: url('../fonts/karu-500i.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'Karu';
-  font-style: oblique;
-  font-weight: 700;
-  src: url('../fonts/karu-700i.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'Overpass Mono';
-  font-weight: 300;
-  src: url('../fonts/overpass-mono-300.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'Weekly Pro';
-  font-weight: 400;
-  src: url('../fonts/weekly-pro-400.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'Weekly Pro';
-  font-style: oblique;
-  src: url('../fonts/weekly-pro-400i.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'Weekly Pro';
-  font-weight: 700;
-  src: url('../fonts/weekly-pro-700.otf') format('opentype');
-}
-
-// Variables ===================================================================
-
-:root {
-  --color-background: hsl(72, 16%, 93%);
-  --color-header: black;
-  --color-body: hsl(60, 1%, 30%);
-  --color-link: hsl(300, 45%, 34%);
-  --color-link--hover: hsl(170, 70%, 20%);
-  --color-link--active: hsl(170, 70%, 15%);
-}
-
-// Dark Mode
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: hsl(60, 1%, 15%);
-    --color-header: white;
-    --color-body: hsl(60, 5%, 70%);
-    --color-link: hsl(300, 100%, 75%);
-    --color-link--hover: hsl(170, 100%, 66%);
-    --color-link--active: hsl(170, 70%, 46%);
-  }
-}
+@import '_fonts';
+@import '_palette';
+@import '_resets';
+@import '_code';
 
 // Content =====================================================================
 
@@ -154,9 +75,31 @@ main {
     }
   }
 
+  blockquote {
+    border-left: 1px solid var(--color-body);
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 15px;
+    padding-left: 14px;
+  }
+
+  dl {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 30px;
+  }
+
+  dt:not(:first-of-type) {
+    margin-top: 5px;
+  }
+
+  dd {
+    text-indent: 30px;
+  }
+
   code,
   pre {
-    background-color: hsl(60, 1%, 13%);
+    background-color: var(--color-background--secondary);
     border-radius: 8px / 15px;
     font-family: 'Overpass Mono';
     font-weight: 300;
@@ -201,6 +144,10 @@ main {
     height: 1px;
     margin: 30px auto;
     width: 50%;
+  }
+
+  em {
+    font-style: oblique;
   }
 
   strong {
