--- a/themes/working-title/source/css/_bases.scss
+++ b/themes/working-title/source/css/_bases.scss
@@ -18,6 +18,12 @@ h2 {
   margin: 30px 0 15px;
 }
 
+p {
+  font-size: 20px;
+  hyphens: auto;
+  line-height: 30px;
+}
+
 ol,
 ul {
   margin-left: 45px;
