--- a/themes/tria-2015/source/css/_content.styl
+++ b/themes/tria-2015/source/css/_content.styl
@@ -6,7 +6,7 @@
     text-transform uppercase
 
   h2, h3, ol, ul, dl, pre, blockquote, iframe
-    color mix(black, alabaster, 65%)
+    color var(--color-body)
     font-size 1.8rem
     line-height 1.618
     margin-bottom 16px
@@ -58,7 +58,7 @@
     text-align center
 
   pre, blockquote
-    border-left 0.2rem solid darken(alabaster, 10%)
+    border-left 0.2rem solid var(--color-background--tertiary)
     margin-left 1.2rem
     padding-left 1.2rem
 
@@ -75,7 +75,7 @@
     display inline-block
     padding 0 8px
 
-    background-color darken(alabaster, 5%)
+    background-color var(--color-background--secondary)
     border-radius 4px
 
     font-style normal
