--- a/themes/tria/source/css/_content.styl
+++ b/themes/tria/source/css/_content.styl
@@ -26,7 +26,7 @@ main, footer
     padding 0 1.8rem
 
   h2, h3, p, ol, ul, dl, pre, blockquote, iframe
-    color mix(black, alabaster, 65%)
+    color var(--color-body)
     font-size 1.1rem
     line-height 1.618
     margin-bottom 0.6rem
