tweak some title bar visuals

--- a/themes/tria-2015/source/css/style.styl
+++ b/themes/tria-2015/source/css/style.styl
@@ -105,7 +105,7 @@ body
     background-position left center
     background-size 38px 44px
 
-    color shadow
+    color var(--color-body)
     font-size 2.4rem
     font-weight 300
     line-height 68px
@@ -150,15 +150,12 @@ aside
   box-sizing content-box
   height 124px
   margin-bottom 16px
-  padding 142px 8px 16px
+  padding 96px 8px 16px
   overflow hidden
 
   background-color var(--color-body)
   background-image linear-gradient(to bottom, #1e1d27 72px, #48475f)
   color alabaster
-
-  @media screen and (min-width: 415px)
-    padding-top 96px
 
   .container
     box-sizing border-box
