add speaking page

--- a/themes/tria-2019/source/css/style.styl
+++ b/themes/tria-2019/source/css/style.styl
@@ -253,6 +253,9 @@ aside
     background-repeat no-repeat
     background-size 8px 21px
 
+    :last-child
+      margin-bottom 16px
+
     p
       color tint(black, 65%)
       font-size 1.4rem
